--- a/modulo5/labECommerce/package.json
+++ b/modulo5/labECommerce/package.json
@@ -12,18 +12,18 @@
    "author": "",
    "license": "ISC",
    "dependencies": {
+      "@types/cors": "^2.8.12",
+      "@types/express": "^4.17.13",
+      "@types/knex": "^0.16.1",
       "cors": "^2.8.5",
-      "dotenv": "^8.2.0",
-      "express": "4.17.0",
-      "knex": "^0.21.1",
+      "dotenv": "^16.0.1",
+      "express": "^4.18.1",
+      "knex": "^2.1.0",
       "mysql": "^2.18.1"
    },
    "devDependencies": {
-      "@types/cors": "^2.8.8",
-      "@types/express": "4.17.0",
-      "@types/knex": "^0.16.1",
       "@types/node": "^13.7.7",
       "ts-node-dev": "^1.0.0-pre.44",
-      "typescript": "^3.8.3"
+      "typescript": "^4.6.3"
    }
 }
